# workspace

./: .gitignore  .prettierignore  CLA.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  LICENSE  README.md  restart-stack.sh  run-stack.sh  run-tests.sh
backend/: .dockerignore  .env-template  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  Dockerfile-pgvector  Dockerfile-rq  Dockerfile-web  docker-compose.e2e.yaml  docker-compose.minio.yaml  docker-compose.tests.yaml  docker-compose.yaml  manage.py  pyproject.toml  restart_dev.sh  rq-entrypoint.sh  run-stack.sh  web-entrypoint.sh
backend/.githooks/: pre-push
backend/ask/: admin.py  api.py  constants.py  exceptions.py  models_catalog.py  schemas.py  tasks.py  throttling.py
backend/ask/helpers/: __init__.py  embeddings.py  llm.py  messages.py  utils.py  validate_key.py
backend/ask/migrations/: 0001_initial.py  0002_askrequest.py  0003_add_ai_config_to_askrequest.py  0004_add_embedding_usage.py  0005_add_org_to_embedding_usage.py
backend/ask/models/: __init__.py  ask.py  embedding_usage.py  embeddings.py
backend/ask/tests/: factories.py
backend/backend/: api.py  asgi.py  urls.py  utils.py
backend/backend/settings/: base.py  dev.py  prod.py  tests.py
backend/backend/tests/: test_request_id.py
backend/collab/: admin.py  consumers.py  locks.py  models.py  permissions.py  routing.py  tasks.py  utils.py  ystore.py
backend/collab/migrations/: 0001_initial.py  0002_create_crdt_tables.py  0003_crdtarchivebatch.py  0004_alter_crdtarchivebatch_id.py
backend/collab/services/: apply_text.py  archive.py
backend/collab/tests/: __init__.py  helpers.py  test_empty_snapshot_bug.py  test_permissions.py  test_rate_limiting.py  test_utils.py
backend/core/: admin.py  api.py  authentication.py  context_processors.py  emailer.py  exceptions.py  fields.py  middlewares.py  rate_limit.py  sitemaps.py  throttling.py  urls.py  utils.py
backend/core/docs/: mcp.md
backend/core/helpers/: __init__.py  api.py  encryption.py  errors.py  http.py  misc.py  tasks.py  text.py
backend/core/migrations/: 0001_initial.py  0002_email_logging_and_spam_score.py
backend/core/models/: __init__.py  logs.py
backend/core/signals/: __init__.py  handlers.py
backend/core/templatetags/: vite.py
backend/core/tests/: common.py
backend/filehub/: constants.py  exceptions.py  schemas.py  tasks.py  throttling.py  urls.py  views.py
backend/imports/: admin.py  constants.py  exceptions.py  schemas.py  tasks.py  throttling.py
backend/pages/: admin.py  constants.py  permissions.py  schemas.py  tasks.py  throttling.py  urls.py  views.py
backend/pulse/: models.py  tasks.py  tests.py  urls.py  views.py
backend/templates/: 403.html  404.html  500.html
backend/updates/: admin.py  models.py  tasks.py  urls.py  views.py
backend/users/: access.py  adapters.py  admin.py  apps.py  constants.py  forms.py  middlewares.py  org_state.py  schemas.py  signals.py  subscription.py  urls.py  utils.py  validators.py
mcp/: LICENSE  README.md  pyproject.toml
mcp/tests/: test_client.py  test_config.py  test_server.py
(+898 files in other folders)
