[project]
name = "hyperclast-mcp"
version = "0.1.0"
description = "MCP server for Hyperclast — lets AI assistants read and write your pages"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "mcp>=1.0.0,<2",
    "httpx>=0.27,<1",
    "click>=8.0,<9",
]

[project.scripts]
hyperclast-mcp = "hyperclast_mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=7.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hyperclast_mcp"]
