[project]
name = "hyperclast-mcp"
version = "0.2.0"
description = "MCP server for Hyperclast — lets AI assistants read and write your pages"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Hyperclast"}]
keywords = ["mcp", "hyperclast", "ai"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "mcp>=1.0.0,<2",
    "httpx>=0.27,<1",
    "click>=8.0,<9",
]

[project.urls]
Homepage = "https://hyperclast.com"
Repository = "https://github.com/hyperclast/workspace"

[project.scripts]
hyperclast-mcp = "hyperclast_mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=7.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hyperclast_mcp"]
